--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     height:100vh;
     flex-direction: column;
     background-image: url("./img/background.png");
+    background-position: center;
 }
 
 h1{
@@ -40,7 +41,7 @@ main{
 }
 .principal{
     display:flex;
-   flex-direction: row;
+   flex-direction:row;
    margin:0 auto;
 }
 .div-imagens{
