Alterações no css com media qery

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer{
 
 
     .p-footer{
-        font-size:0.5rem;
-        height:auto;
-
+    font-size:0.5rem;
+    height:auto;
+    }
 }
