--- a/fase1armando.css
+++ b/fase1armando.css
@@ -106,3 +106,15 @@ h1{
 .botao{
     cursor:pointer;
 }
+
+@media(max-width:1200px){
+
+
+    h1{
+        font-size:3.0rem;
+    }
+
+    .div-container{
+        width:100%;
+    }
+}
