--- a/gameover.css
+++ b/gameover.css
@@ -82,3 +82,28 @@ body{
 p{
     text-align: center;
 }
+
+@media(max-width:1200px){
+    .h1-gameover{
+        font-size:2.0rem;
+    }
+
+    .h1-principal{
+        font-size:3rem;
+    }
+
+    .div-principal{
+        width:100%;
+        height:auto;
+    }
+
+    .div-container{
+        padding-top:20px;
+        width:70%;
+        height:auto;
+    }
+
+    .p-descricao{
+        font-size:0.7rem;
+    }
+}
