--- a/gameover.css
+++ b/gameover.css
@@ -83,6 +83,14 @@ p{
     text-align: center;
 }
 
+footer{
+    text-align:center;
+    color:white;
+    font-weight:bold;
+    font-size:0.7rem;
+    margin:10px;
+}
+
 @media(max-width:1200px){
     .h1-gameover{
         font-size:2.0rem;
