--- a/fase1armando.css
+++ b/fase1armando.css
@@ -122,6 +122,10 @@ footer{
         font-size:3.0rem;
     }
 
+    .div-principal{
+        margin:30px;
+    }
+
     .div-container{
         width:100%;
     }
