--- a/gameover.css
+++ b/gameover.css
@@ -103,6 +103,7 @@ footer{
     .div-principal{
         width:100%;
         height:auto;
+        margin:0;
     }
 
     .div-container{
@@ -113,5 +114,19 @@ footer{
 
     .p-descricao{
         font-size:0.7rem;
+    }
+
+    .img-gameover{
+        margin:8px;
+        padding:6px;
+        width:70px;
+        height:70px;
+    }
+
+    .botao{
+    font-size:0.65rem;
+    margin: 5px;
+    font-weight:bold;
+    padding:3px;
     }
 }
