--- a/style.css
+++ b/style.css
@@ -94,6 +94,11 @@ footer{
 }
 
 @media(max-width:1200px){
+
+    main{
+        margin:0;
+        padding:0;
+    }
     h5{
         width:80%;
         font-size:0.8rem;
@@ -114,7 +119,14 @@ footer{
     }
 
     .div-imagens{
-        margin-top: 15px;
+        margin-top:15px;
+    }
+
+    span{
+        font-size:1.8rem;
+        padding:0;
+        margin:0;
+
     }
 
     .img-personagem{
@@ -132,6 +144,6 @@ footer{
 
     .p-footer{
     font-size:0.5rem;
-    height:auto;
+    height:40px;
     }
 }
