--- a/vocevenceu.css
+++ b/vocevenceu.css
@@ -94,12 +94,15 @@ footer{
     }
 
     .h1-principal{
+        margin:8px;
         font-size:3rem;
     }
 
     .div-principal{
         width:100%;
         height:auto;
+        margin:0;
+        padding:0;
     }
 
     .div-container{
